--- a/src/style.less
+++ b/src/style.less
@@ -53,6 +53,10 @@
           width: 16px;
           display: inline-block;
         }
+
+        &:hover {
+        	background: #eee
+        }
       }
     }
 
